k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  namespace: blog-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: blogapp-backend
        image: wiings09/blogapp-backend
        ports:
        - containerPort: 4001
