k8s/frontend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: blog-frontend
  namespace: blog-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: blogapp-frontend
          image: wiings09/blogapp-frontend
          ports:
          - containerPort: 80
