k8s/mongodb-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb-deployment
  namespace: blog-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: blogapp-mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
