k8s/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: blog-app
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - port: 4001
    targetPort: 4001
    nodePort: 30001
