k8s/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: blog-app
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
