k8s/mongodb-service.yml
kind: Service
apiVersion: v1
metadata:
  name: mongo
  namespace: blog-app
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
